Update readme with more infos and link to online example. Also add footer on examples.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 *{font-family:'Roboto','Helvetica Neue',Helvetica,Arial,sans-serif;}
 .well{margin:80px auto;padding:30px 15px;}
 h4{margin-top:0;}
+p.footer{margin:20px 0 -10px 0;font-size:90%;}
 
 /* ---------------------------------------- */
 /* SVG */
