--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,10 +10,11 @@ p.footer{margin:20px 0 -10px 0;font-size:90%;}
 /* SVG */
 /* ---------------------------------------- */
 #tap-game {width:100%;height:300px;background:#282828;-webkit-border-radius:10px;-moz-border-radius:10px;border-radius:10px;font-size:20px;}
-#tap-game .center{-ms-transform:translateX(50%);-webkit-transform:translateX(50%);transform:translateX(50%);}
+#tap-game .center-rect{-ms-transform:translateX(-55px);-webkit-transform:translateX(-55px);transform:translateX(-55px);}
+/*#tap-game .center{-ms-transform:translateX(50%);-webkit-transform:translateX(50%);transform:translateX(50%);}
 #tap-game .center-25{-ms-transform:translateX(25%);-webkit-transform:translateX(25%);transform:translateX(25%);}
 #tap-game .center-75{-ms-transform:translateX(75%);-webkit-transform:translateX(75%);transform:translateX(75%);}
-#tap-game .invert{-ms-transform: rotate(180deg);-webkit-transform: rotate(180deg);transform: rotate(180deg);}
+#tap-game .invert{-ms-transform: rotate(180deg);-webkit-transform: rotate(180deg);transform: rotate(180deg);}*/
 
 #tap-game .color-white{fill:#fff;}
 #tap-game .color-gray{fill:#888;}
