--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
 .well{margin:80px auto;padding:30px 15px;}
 h4{margin-top:0;}
 p.footer{margin:20px 0 -10px 0;font-size:90%;}
+@media (max-width: 768px) { .well{margin:10px auto;} }
 
 /* ---------------------------------------- */
 /* SVG */
